# tokenscope-llama-latency-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: __init__.py  bandwidth_microbench.py  cross_platform_compare.py  energy_estimation.py  figure_style.py  findings_report.py  gpu_model_forensics.py  kv_cache_model.py  load_results.py  make_plots.py  predictor_fit.py  regime_map.py  report_tables.py  roofline.py
bench/: __init__.py  methodology.py  registry.py  results_schema.py  run_bench.py  sweep.py
bench/backends/: __init__.py  base.py  hf_backend.py  llamacpp_backend.py
bench/utils/: __init__.py  env_info.py  io.py  prompts.py  stats.py  system_name.py  timers.py  token_tracing.py
configs/: bench_default.yaml  devices_example.yaml  sweep_kv_cache.yaml  sweep_models.yaml  sweep_models_gguf.yaml  sweep_precision.yaml  sweep_sequence.yaml  sweep_sequence_gpu.yaml  sweep_spec_decode.yaml
docs/: GAP_ANALYSIS_AND_FIXES.md  architecture_notes.md  grading_checklist.md  kv_cache_quantization.md  methodology.md  reproducibility.md  timing_diagram.md
notebooks/: analyze_results.ipynb
profiling/: __init__.py  decompose_decode.py  hf_hooks.py  nsys_instructions.md  perf_cpu_instructions.md  torch_profiler_decode.py
results/Cross-Platform Comp Result/: README.md  cross_platform_report.md
results/Cross-Platform Comp Result/csv/: cross_platform_bandwidth.csv  cross_platform_decomp.csv  cross_platform_energy.csv  (+8 more)
tests/: test_kv_cache_model.py  test_predictor_fit.py  test_schema.py  test_stats.py
(+9 files in other folders)
